kubernetes-deployment.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
 name: nodejs-store-mongodb
 labels:
   app: nodejs-store
   tier: db
spec:
 selector:
   matchLabels:
     app: nodejs-store
     tier: db
 serviceName: "nodejs-store-mongodb"
 replicas: 2
 template:
   metadata:
     labels:
       tier: db
       app: nodejs-store
   spec:
     terminationGracePeriodSeconds: 10
     containers:
       - name: mongo
         image: mongo
         command:
           - mongod
           - "--replSet"
           - rs0
           - "--smallfiles"
           - "--noprealloc"
         ports:
           - containerPort: 27017
         volumeMounts:
           - name: mongo-persistent-storage
             mountPath: /data/db
       - name: mongo-sidecar
         image: cvallance/mongo-k8s-sidecar
 volumeClaimTemplates:
 - metadata:
     name: mongo-persistent-storage
     annotations:
       volume.beta.kubernetes.io/storage-class: "standard"
   spec:
     accessModes: [ "ReadWriteOnce" ]
     resources:
       requests:
         storage: 1Gi
