kubernetes-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: nodejs-store
    tier: db
  name: nodejs-store-mongodb
spec:
  ports:
    - port: 27017
      targetPort: 27017
  selector:
    app: nodejs-store
    tier: db
